<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Solitaire Snooder 21 Motorola</string>
    <string name="run_snood_button">Run Snooder 21!</string>
    <string name="settings_label">Settings</string>
    <string name="vibration_check">Vibration Haptics</string>
    <string name="sound_check">Sound</string>
    <string name="toasts_check">Show Toasts</string>
    <string name="fps_check">Show FPS</string>
    <string name="scores_check">Write High Scores to Table</string>
    <string name="cover_desc">Snooder 21 Cover Image</string>
    <string name="name_text">Please enter your name:</string>
    <string name="hint_text_edit">Enter your name</string>
    <string name="player_text_edit">Player</string>
    <string name="about_and_help_label"><![CDATA[About & Help]]></string>
    <string name="about_button">About Game</string>
    <string name="help_button">Help Game</string>
    <string name="demo_button">Demo</string>
    <string name="high_score_label">High Scores Table</string>
    <string name="players_list">Players List</string>
    <string name="scores_list">0</string>
    <string name="animation_label">Animations Speed:</string>
    <string name="version">v.17.08.22 | 22-AUG-2017</string>
    <string name="ok">OK</string>
    <string name="icon_desc">Icon Snooder 21</string>
    <string name="theme_label">Theme</string>
    <string name="theme_moto">Moto</string>
    <string name="theme_paper">Paper</string>
    <string name="toast_time_up">Time up!</string>
    <string name="toast_hurry_up">Hurry up!</string>
    <string name="toast_game_over">Game over!</string>
    <string name="toast_congrats">Congratulations! You have completed the game!</string>
    <string name="toast_next_level">You Win! Enjoy the next level!</string>
    <string name="toast_high_score_ch1">You get:</string>
    <string name="toast_high_score_ch2">scores!</string>
    <string name="toast_high_score_ch3">Writing score…</string>
    <string name="help_string" tools:ignore="TypographyDashes">Use touchscreen and drag and drop game card to place it on the corresponding column. Also you can just using touches on the columns and 1, 2, 3, 4 keys on physical keyboard.\n\nThe object is to use all the cards by making combinations of 21 on any of the 4 column. If you succeed, you WIN the next level. The deck is NOT standard: suits are replaced by Snooders.\n\nEasy level is 32 cards. Medium level is 45 cards. Both Hard and Evil levels are 58 cards. The deck on each level includes 6 wild cards. A WILD card can be placed on any column for an automatic 21. If 5 cards on one column total less than 21, you are awarded the 21. An ACE is worth 1 or 11. J, Q, K are all worth 10.\n\nWhen a 21 is made, the column is cleared and can be used to build another 21. If a column total is greater then 21, the column is frozen. You MUST play a card until the deck is used, OR all columns are frozen, OR time runs out.\n\nThe value of making a 21 is worth more from left to right (100-400 points).\n\nYou also get additional 50 points for each card placed in a column. When out of cards, you get 200 bonus points for every card on the screen.\n\nThe game ends when time runs out (there are 3 and less minutes) or all 4 columns are frozen. In the fourth Evil level, you win the game when all the deck cards are used.</string>
    <string name="about_string" tools:ignore="TypographyDashes">This game is remake of Motorola\'s standard game: Snood™ 21. Snooder 21 uses for videocontext drawing via canvas of SurfaceView class.\nTranslated to portuguese and redesigned by Raul Kaio\nraul@raulkaio.com.br\nhttp://raulkaio.com.br\n\n• © 2016 S. \"EXL\" KLS\nemail: exl@bk.ru\nemail: exlmotodev@gmail.com\n\nSource Code:\nhttp://github.com/EXL/Snooder21\n\nArticle about making Snooder 21:\nhttp://exlmoto.ru/snooder21-droid\n\nThanks to:\n• Danil Medvedev for idea and support;\n• Nikita Prokopchik for cool photos;\n• Zorge.R for hosting, patience and help.\n\nOriginal idea:\n• © 1996-2002 David M. Dobson and/or Snood, LLC.\n\nSound effects:\nhttps://github.com/EXL/Snooder21/blob/master/docs/Sounds_Licenses.txt</string>
    <string name="antialiasing_check">Antialiasing</string>
    <string name="banner_ad_unit_id">ca-app-pub-5266434890042499/9196814236</string>
    <string name="ad_unit_id">ca-app-pub-5266434890042499/6541008537</string>
</resources>
