<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:contentDescription="@string/cover_desc"
            android:src="@drawable/cover" />

        <Button
            android:id="@+id/runSnoodButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_dark"
            android:gravity="center_horizontal"
            android:text="@string/run_snood_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="italic"
            android:padding="20dp"/>

        <!--<TextView
            android:id="@+id/aboutHelpLabel"
            android:layout_marginTop="@dimen/layout_margin"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_and_help_label"
            android:gravity="center_horizontal"/>-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_button"
                android:padding="10dp"/>

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_button"
                android:padding="10dp"/>

            <!--Button
                android:id="@+id/demoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_button" /-->
        </TableRow>

        <!--TextView
            android:id="@+id/themeLabel"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_label" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/motoThemeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_moto" />

            <RadioButton
                android:id="@+id/paperThemeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_paper" />
        </RadioGroup-->

        <TextView
            android:id="@+id/settingsLabel"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/settings_label"
            android:gravity="center_horizontal"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/checkBoxVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibration_check" />

            <CheckBox
                android:id="@+id/checkBoxSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_check" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/checkBoxToasts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toasts_check" />

            <CheckBox
                android:id="@+id/checkBoxFps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fps_check"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/checkBoxAntialiasing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/antialiasing_check"
                android:gravity="center_horizontal"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_edit_margin"
            android:layout_marginLeft="@dimen/string_margin"
            android:layout_marginTop="@dimen/string_margin"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/animationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animation_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/animationValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_edit_margin"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="HardcodedText,RtlHardcoded"
                android:textSize="@dimen/text_size"/>
        </TableRow>

        <SeekBar
            android:id="@+id/animationBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/seek_margin"
            android:layout_marginTop="@dimen/seek_margin"
            android:max="@integer/animation_max"
            android:progress="@integer/animation_progress" />

        <TextView
            android:id="@+id/nameSmallLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_edit_margin"
            android:layout_marginLeft="@dimen/string_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/name_text"
            tools:ignore="RtlHardcoded"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/player_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_edit_margin"
            android:layout_marginLeft="@dimen/text_edit_margin"
            android:ems="10"
            android:hint="@string/hint_text_edit"
            android:inputType="textPersonName"
            android:text="@string/player_text_edit"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/checkBoxWriteScores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores_check"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/highScoreLabel"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/high_score_label"
            android:gravity="center_horizontal"/>

        <TableLayout
            android:id="@+id/ButtonBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin">

            <TableRow android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/player_Names"
                    android:layout_height="wrap_content"
                    android:text="@string/players_list"
                    android:textSize="@dimen/text_size"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/player_Scores"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/scores_list"
                    android:textSize="@dimen/text_size" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
